--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         <p>Connect with me to discuss opportunities or collaborations.</p>
     </footer>
 
-    <script src="scripts.js"></script> <!-- Optional: Add JavaScript file for smooth scrolling -->
+    <script src="scripts.js"></script> 
     <script>
-        // Smooth scrolling for anchor links
+      
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
